--- a/Members.html
+++ b/Members.html
@@ -63,11 +63,19 @@
 
     // Dummy member data - now with a 'type' for colored frames
     const dummyMembers = [
-      { id: 1, name: "Sister Jane Doe", phone: "(555) 123-4567", email: "jane.doe@email.com", extra_details: "A dedicated servant of the Lord. Loves knitting and gardening.", type: 'Leadership' },
-      { id: 2, name: "Sister Mary Smith", phone: "(555) 234-5678", email: "mary.smith@email.com", extra_details: "Passionate about spreading the gospel through music.", type: 'Music' },
-      { id: 3, name: "Sister Sarah Johnson", phone: "(555) 345-6789", email: "sarah.j@email.com", extra_details: "A Bible study leader and mentor to young women.", type: 'Bible Study' },
-      { id: 4, name: "Sister Brenda Lee", phone: "(555) 456-7890", email: "brenda.lee@email.com", extra_details: "Known for her hospitality and delicious baking.", type: 'Hospitality' },
-      { id: 5, name: "Sister Eleanor Vance", phone: "(555) 567-8901", email: "e.vance@email.com", extra_details: "An intercessor with a heart for the broken.", type: 'Intercessory' },
+      { id: 1, name: "Erica", phone: "(352) 844-1777", email: "Grandma87654@gmail.com", extra_details: "N/A", type: 'Music'},
+      { id: 2, name: "Kathryn Kerbo", phone: "(352) 286-7843", email: "kaykaerbo@yahoo.com", extra_details: "Pet Sitting", type: 'Bible Study'},
+      { id: 3, name: "Stephanie Cunningham", phone: "(352) 320-696", email: "scunningham1234@gmail.com", extra_details: "N/A", type: 'Hospitality'},
+      { id: 4, name: "Ruth Carroll", phone: "(352) 895-3796", email: "carrollruth@gmail.com", extra_details: "N/A", type: 'Intercessory'},
+      { id: 5, name: "Barbara Fortin", phone: "(352) 425-4525", email: "rbfortin@outlook.com", extra_details: "N/A", type: 'Music'},
+      { id: 6, name: "Jennifer Thomas", phone: "(207) 249-0230", email: "jennythomas1729@gmail.com", extra_details: "Death Doula, Grief counseling/assistance", type: 'Bible Study'},
+      { id: 7, name: "Amanda Ramirez", phone: "(727) 294-2225", email: "arramirez814@gmail.com", extra_details: "Computer/Cell phone assistance", type: 'Hospitality'},
+      { id: 8, name: "Peggy Blue", phone: "(352) 454-3893", email: "bluewing747@gmail.com", extra_details: "Professional organizer/Decorating", type: 'Intercessory'},
+      { id: 9, name: "Vickie Barrett", phone: "(352) 282-3893", email: "v120@aol.com", extra_details: "N/A", type: 'Music'},
+      { id: 10, name: "Maxine Zick", phone: "(352) 727-8850", email: "zmax1654@gmail.com", extra_details: "N/A", type: 'Bible Study'},
+      { id: 11, name: "Barbara Cyrus", phone: "(352) 286-8040", email: "Barbaracyrus@icloud.com", extra_details: "N/A", type: 'Hospitality'},
+      { id: 12, name: "Heather Drake", phone: "(352) 427-7369", email: "N/A", extra_details: "N/A", type: 'Intercessory'},
+      { id: 13, name: "Sue Belshaw", phone: "(802) 567-8901", email: "carriebeth54@gmail.com", extra_details: "Peer counseling, Biblical counseling", type: 'Music'},
     ];
 
     // --- Main App Component ---
