--- a/Members.html
+++ b/Members.html
@@ -68,7 +68,7 @@
       { id: 3, name: "Stephanie Cunningham", phone: "(352) 320-696", email: "scunningham1234@gmail.com", extra_details: "N/A", type: 'Hospitality'},
       { id: 4, name: "Ruth Carroll", phone: "(352) 895-3796", email: "carrollruth@gmail.com", extra_details: "N/A", type: 'Intercessory'},
       { id: 5, name: "Barbara Fortin", phone: "(352) 425-4525", email: "rbfortin@outlook.com", extra_details: "N/A", type: 'Music'},
-      { id: 6, name: "Jennifer Thomas", phone: "(207) 249-0230", email: "jennythomas1729@gmail.com", extra_details: "Death Doula, Grief counseling/assistance", type: 'Bible Study'},
+      { id: 6, name: "Jennifer Thomas", phone: "(207) 249-0230", email: "jennythomas1729@gmail.com", extra_details: "Death Doula, Grief counseling/assistance, Notary", type: 'Bible Study'},
       { id: 7, name: "Amanda Ramirez", phone: "(727) 294-2225", email: "arramirez814@gmail.com", extra_details: "Computer/Cell phone assistance", type: 'Hospitality'},
       { id: 8, name: "Peggy Blue", phone: "(352) 454-3893", email: "bluewing747@gmail.com", extra_details: "Professional organizer/Decorating", type: 'Intercessory'},
       { id: 9, name: "Vickie Barrett", phone: "(352) 282-3893", email: "v120@aol.com", extra_details: "N/A", type: 'Music'},
