--- a/index.html
+++ b/index.html
@@ -284,6 +284,23 @@
                     >
                       Members
                     </a>
+                    <!-- Hamburger Menu Icon for Mobile -->
+                <button id="mobile-menu-button" class="md:hidden text-[var(--text-primary)] focus:outline-none" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open mobile navigation menu">
+                    <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <!-- Mobile Navigation Menu -->
+        <nav id="mobile-menu" class="hidden md:hidden bg-[var(--bg-primary)]/90 pt-4 pb-2 mt-4 rounded-b-xl border-t border-[var(--border-default)]" role="navigation" aria-label="Mobile Navigation">
+            <ul class="flex flex-col items-center space-y-4">
+                <li><a href="#prayer" class="block w-full text-center text-[var(--text-primary)] transition duration-300 text-xl py-2">Prayer Requests</a></li>
+                <li><a href="#provisions" class="block w-full text-center text-[var(--text-primary)] transition duration-300 text-xl py-2">Provisions Needed</a></li>
+                <li><a href="events" class="block w-full text-center text-[var(--text-primary)] transition duration-300 text-xl py-2">Events</a></li>
+                <li><a href="updates" class="block w-full text-center text-[var(--text-primary)] transition duration-300 text-xl py-2">Updates</a></li>
+                <li><a href="#members.html" target="_blank" class="block w-full text-center text-[var(--text-primary)] transition duration-300 text-xl py-2">Members</a></li>
+            </ul>
                   </nav>
                 </div>
               </header>
