--- a/Members.html
+++ b/Members.html
@@ -73,7 +73,7 @@
 
       <!-- Member Profile Card - Erica -->
       <div class="p-6 rounded-xl shadow-md transition-colors duration-300" id="member-card-2">
-        <h3 class="text-xl font-semibold mb-2 text-[#b83b3b]">Erica</h3>
+        <h3 class="text-xl font-semibold mb-2 text-[#b83b3b]">Erica Osier</h3>
         <p class="mb-2"><strong>Phone:</strong> (352) 844-1777</p>
         <p class="mb-4"><strong>Email:</strong> Grandma87654@gmail.com</p>
       </div>
@@ -89,7 +89,7 @@
       <!-- Member Profile Card - Stephanie Cunningham -->
       <div class="p-6 rounded-xl shadow-md transition-colors duration-300" id="member-card-4">
         <h3 class="text-xl font-semibold mb-2 text-[#b83b3b]">Stephanie Cunningham</h3>
-        <p class="mb-2"><strong>Phone:</strong> (352) 320-696</p>
+        <p class="mb-2"><strong>Phone:</strong> (352) 321-0696</p>
         <p class="mb-4"><strong>Email:</strong> scunningham1234@gmail.com</p>
       </div>
 
