--- a/Members.html
+++ b/Members.html
@@ -159,6 +159,13 @@
         <p class="mb-4"><strong>Email:</strong></p>
       </div>
 
+      <!-- Member Profile Card - Sarah Leppert -->
+      <div class="p-6 rounded-xl shadow-md transition-colors duration-300" id="member-card-14">
+        <h3 class="text-xl font-semibold mb-2 text-[#b83b3b]">Sarah Leppert</h3>
+        <p class="mb-2"><strong>Phone:</strong> (352) 362-8215</p>
+        <p class="mb-4"><strong>Email:</strong>gatorcht@gmail.com</p>
+      </div>
+
     </div>
 
     <!-- Back button -->
